--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "## What is GA Tinder?",
   "main": "app.js",
   "dependencies": {
+    "axios": "^0.16.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
