--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
+    "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.8.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
