add start scripts in express

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "debugger": "DEBUG=*:* npm run dev",
     "deploy": "cd client && yarn build && cp -a ./build/ ../public/"
   },
   "repository": {
